--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,6 +12,7 @@
     --secondary-background-color: #F5F4FA;
     --secondary-text-color:rgba(255, 255, 255, 0.6);
     --border-color: #EEEEEE;
+    --border-modal-input: rgba(33, 33, 33, 0.2);
     --link-logo-color: #AFB1B8;
     --transition-cubic: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -235,6 +236,7 @@ body{
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
+    z-index: 9999;
 }
 
 .backdrop.is-hidden{
@@ -248,8 +250,9 @@ body{
     left: 50%;
     transform: translate(-50%, -50%);
     display: flex;
+    flex-wrap: wrap;
     min-height: 581px;
-    min-width: 528px;
+    width: 528px;
     background-color: var(--white-color);
 }
 
@@ -280,6 +283,120 @@ body{
     border: 1px solid var(--accent-color);
 }
 
+.modal-title{
+    color: var(--title-text-color);
+    height: 23px;
+    margin-top: 0;
+    margin-bottom: 12px;
+    margin-left: auto;
+    margin-right: auto;
+    Font-size: 20px;
+    line-height: calc(23 / 20);
+}
+
+.modal-form{
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 40px;
+    margin-right: 40px;
+}
+
+
+.modal-input{
+    margin-top: 4px;
+    width: 448px;
+    height: 40px;
+    padding-left: 42px;
+    border: 1px solid var(--border-modal-input);
+    border-radius: 4px;
+
+    transition: border 250ms var(--transition-cubic);
+}
+.modal-label {
+    position: relative;
+}
+
+
+.modal-input:focus-within + .input-icon{
+    color: var(--accent-color);
+}
+
+.modal-input:focus-within{
+    border: 1px solid var(--accent-color);
+    outline: none;
+}
+
+.input-icon{
+    position: absolute;
+    bottom: 14px;
+    left: 15px;
+    width: 12px;
+    height: 12px;
+    fill: currentColor;
+
+    transition: color 250ms var(--transition-cubic);
+}
+
+
+.modal-label:not(:last-child){
+    margin-bottom: 10px;
+}
+.modal-label:last-child{
+    margin-bottom: 20px;
+}
+
+.modal-feedback{
+    height: 120px;
+    padding: 12px 16px;
+    resize: none;
+}
+
+.modal-checkbox{
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+    margin-left: 12px;
+}
+
+/* .checkbox{
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    position: absolute;
+} */
+.checkbox:checked + .checkbox-icon{
+    background-image: url(../images/checkbox/icon-check.svg);
+}
+
+
+.checkbox-icon{
+    width: 16px;
+    height: 15px; 
+    background-image: url(../images/checkbox/frame.svg);
+
+    transition: background-image 250ms var(--transition-cubic);
+}
+
+.checkbox-txt, .checkbox-link{
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-left: 8px;
+    font-size: 14px;
+    line-height: calc(24 / 14);
+}
+
+.checkbox-link{
+    color: var(--accent-color);
+}
+
+.submit-btn{
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 40px;
+    padding-left: 56px;
+    padding-right: 55px;
+
+}
 /* Цвет заголовков*/
 .section-title{
     margin-top: 0;
@@ -556,6 +673,18 @@ body{
     background-color: var(--accent-color);
 }
 
+.footer-subscript{
+    margin-left: 93px;
+}
+.title-subscript{
+    margin-top: 0;
+    margin-bottom: 20px;
+    font-size: 14px;
+    line-height: calc(16 / 14);
+    text-transform: uppercase;
+    color: var(--white-color);
+}
+
 /* PORTFOLIO */
 
 .portfolio-list{
@@ -566,6 +695,42 @@ body{
 .portfolio-list .item:not(:last-child){
     margin-right: 8px;
 }
+
+.subscript-form{
+    display: flex;
+    align-items: center;
+}
+
+.subscript-input{
+    width: 358px;
+    height: 50px;
+    margin-right: 12px;
+    padding-left: 16px;
+    background-color: inherit;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+}
+
+.subscript-input:focus-within {
+    color: var(--white-color);
+    outline: none;
+
+}
+
+.footer-btn{
+    display: flex;
+    align-items: center;
+    padding-right: 13px;
+
+}
+
+.btn-icon{
+    width: 24px;
+    height: 24px;
+    margin-left: 10px;
+}
+
 
 /*Дизайн кнопок на портфолио*/
 .section .portfolio-button{
