--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,6 +14,10 @@
     --border-color: #EEEEEE;
     --border-modal-input: rgba(33, 33, 33, 0.2);
     --link-logo-color: #AFB1B8;
+    /* переменніе для формулы */
+    --indent: 30px;
+    --items: 4;
+    /* cubic */
     --transition-cubic: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -23,6 +27,8 @@ body{
     font-family: Roboto, sans-serif;
     letter-spacing: 0.03em;
 }
+
+
 /* скрываем заголовки */
 .visually-hidden {
     position: absolute;
@@ -59,7 +65,6 @@ body{
 
 .header{
     display: flex;
-    align-items: center;
     justify-content: space-between;
 }
 
@@ -86,17 +91,20 @@ body{
 /* навигация на другие страницы*/
 .site-nav{
     display: flex;
+    gap: 50px;
 }
 
 .contact-nav{
     display: flex;
+    gap: 50px;
     align-items: center;
+
 }
 
 .site-nav .nav-link,
 .contact-nav .contact-link{
     position: relative;
-    display: block;
+    display: flex;
     padding-top: 32px;
     padding-bottom: 32px;
     color:var(--title-text-color);
@@ -107,16 +115,12 @@ body{
     
     transition: color 250ms var(--transition-cubic);
 }
-.site-nav .item:not(:last-child),
-.contact-nav .item:not(:last-child){
-    margin-right: 50px;
-}
 
 .site-nav .nav-link::after{
     content: '';
     position: absolute;
     left: 0;
-    bottom: -2px;
+    bottom: 0px;
 
     transform: scaleX(0);
 
@@ -145,7 +149,7 @@ body{
     content: '';
     position: absolute;
     left: 0;
-    bottom: 0;
+    bottom: 2px;
     transform: translate(0, 50%);
     height: 4px;
     width: 100%;
@@ -403,10 +407,10 @@ body{
 /*приемущества*/
 .advantage{
     display: flex;
+    gap: 30px;
 }
-.advantage .advantage-list:not(:last-child){
-    margin-right: 30px;
-}
+
+
 
 .advantage-list .thumb{
     display: flex;
@@ -448,9 +452,7 @@ body{
 .work-list{
     display: flex;
     justify-content: center;
-}
-.work-list .item:not(:last-child){
-    margin-right: 30px;
+    gap: var(--indent);
 }
 
 .work-thumb{
@@ -488,12 +490,12 @@ body{
     line-height: 1.19;
     text-align: center;
 }
+
+
 .team{
     display: flex;
     justify-content: center;
-}
-.team .team-list:not(:last-child){
-    margin-right: 30px;
+    gap: var(--indent);
 }
 
 .team .team-list{
@@ -502,7 +504,7 @@ body{
     border-radius: 0px 0px 4px 4px;
 }
 
-.team-list .item{
+.team-list .team-box{
     padding-top: 30px;
     padding-bottom: 16px;
 }
@@ -522,9 +524,8 @@ body{
 .social-list{
     display: flex;
     justify-content: center;
-}
-.social-list .social-item:not(:last-child){
-    margin-right: 10px;
+    gap: 10px;
+
 }
 
 .social-link, .footer-link{
@@ -558,12 +559,9 @@ body{
 
 .clients-list{
     display: flex;
+    gap: var(--indent);
 }
 
-
-.clients-item:not(:last-child) {
-    margin-right: 30px;
-}
 
 .clients-link{
     display: flex;
@@ -648,15 +646,12 @@ body{
 .footer-list{
     display: flex;
     margin-top: 20px;
+    gap: 10px;
 } 
 
 .footer-link{
     color: var(--white-color);
     background-color: rgba(255, 255, 255, 0.1);
-}
-
-.footer-list .footer-item:not(:last-child){
-    margin-right: 10px;
 }
 
 
@@ -677,23 +672,12 @@ body{
     color: var(--white-color);
 }
 
-/* PORTFOLIO */
-
-.portfolio-list{
-    display: flex;
-    justify-content: center;
-    margin-bottom: 56px;
-}
-.portfolio-list .item:not(:last-child){
-    margin-right: 8px;
-}
-
-.subscript-form{
+.subscript-form {
     display: flex;
     align-items: center;
 }
 
-.subscript-input{
+.subscript-input {
     width: 358px;
     height: 50px;
     margin-right: 12px;
@@ -710,17 +694,26 @@ body{
 
 }
 
-.footer-btn{
+.footer-btn {
     display: flex;
     align-items: center;
     padding-right: 28px;
 
 }
 
-.btn-icon{
+.btn-icon {
     width: 24px;
     height: 24px;
     margin-left: 10px;
+}
+
+/* PORTFOLIO */
+
+.portfolio-list{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 56px;
+    gap: 8px;
 }
 
 
@@ -755,13 +748,7 @@ body{
     display: flex;
     flex-wrap: wrap;
     width: 370;
-}
-
-.portfolio .item:not(:nth-of-type(3n)){
-    margin-right: 30px;
-}
-.portfolio .item:not(:nth-last-child(-n + 3)){
-    margin-bottom: 30px;
+    gap: var(--indent);
 }
   
 .portfolio-item {
